--- a/Build.html
+++ b/Build.html
@@ -41,10 +41,10 @@
 <h2>What is it?</h2>
 <p>A virtual machine based toolchain with that uses common Makefile &amp; GDB based interfaces for
 building and debugging.
-Currently supports Linux, Win32, MSP430 &amp; STM32 platforms (AVR/Arduino, RaspberryPi and Propellor coming).</p>
+Currently supports Linux, Win32, MSP430, STM32, AVR/Arduino platforms and RaspberryPi.</p>
 <p>How many development environments for embedded systems have you collected over the years? 
 Each has its own IDE, many versions of eclipse, all with their own perculiarities.</p>
-<p>Open; Rocket/Build is a completely open Vagrant based virtual machine description that will
+<p>Open; Block/Build is a completely open Vagrant based virtual machine description that will
 provision a Linux based virtual machine for building software for multiple targets.</p>
 <p>Host-independent; being VM based, all dependencies on the host platform &amp; OS have been 
 abstracted away.</p>
@@ -100,7 +100,7 @@ laptops/desktops/CI servers.</p>
 <p>Can easily and trasparently switch between a dedicated build server and local builds.</p>
 </li>
 <li>
-<p>Open source toolchains are good, but generally hard to setup. Rocket/Build takes the difficulty 
+<p>Open source toolchains are good, but generally hard to setup. Block/Build takes the difficulty 
 out of this.</p>
 </li>
 <li>
