--- a/Platform.html
+++ b/Platform.html
@@ -71,7 +71,7 @@ on your target. Having multiple targets to test can give an extra angle on those
 bugs.</p>
 </li>
 <li>
-<p><em>Pre-tested</em>. All the code you can take from Rocket/Blocks is code you're not writing, debugging,
+<p><em>Pre-tested</em>. All the code you can take from Platform/Block is code you're not writing, debugging,
 testing and documenting.</p>
 </li>
 <li>
