--- a/BlockWorks/public/about/index.html
+++ b/BlockWorks/public/about/index.html
@@ -44,11 +44,28 @@
     <div class="wrap">
         <div class="section" id="title">BlockWorks Co</div>
 
-        <div class="section" id="content">
+        <div class="section" id="content"><p>I&rsquo;m an experienced software engineer and architect with many years working with embedded, real-time and
+resource-constrained systems.
+Domains I&rsquo;ve worked in cover many industries from defense, smart-metering, IoT, GPS, signal processing
+and mobile applications.</p>
 
-<h1 id="best-pactices-in-embedded-software-development">Best pactices in embedded software development.</h1>
+<p>The intention here is to share some wisdom and best-practices that I&rsquo;ve picked up over my years consulting
+for the many clients I&rsquo;ve worked for.</p>
 
-<p>I&rsquo;m an experienced software engineer and architect with many years working with embedded</p>
+<p>Though focussed on embedded/real-time work, I&rsquo;ve also served my time on the server and desktop side(s)
+to accompany the embedded devices.
+No embedded-device lives on its own, they tend to naturally be one small part of larger systems and
+I consider myself a systems-focussed engineer and architect, spreading my time across most disciplines
+and the communication between them.
+My technical knowledge is both broad and deep, allowing me to match up high-level abstractions with
+low-level implemetation details to produce a more optimal system.</p>
+
+<p>As any complex system develops, the need for testing becomes paramount, especially as the scale of the
+deployment rises. To that end, designing-for-test is an important aspect of my methodologies.</p>
+
+<p>If you wish to contact me for any matter, professionally otherwise, feel free to email me (Steve@ZooKoo.com)</p>
+
+<p><em>Steve Tickle</em></p>
 </div>
 
         
