--- a/BlockWorks/public/about/index.html
+++ b/BlockWorks/public/about/index.html
@@ -63,9 +63,11 @@ low-level implemetation details to produce a more optimal system.</p>
 <p>As any complex system develops, the need for testing becomes paramount, especially as the scale of the
 deployment rises. To that end, designing-for-test is an important aspect of my methodologies.</p>
 
-<p>If you wish to contact me for any matter, professionally otherwise, feel free to email me (Steve@ZooKoo.com)</p>
+<p>If you wish to contact me for any matter, professionally or otherwise, feel free to email me (Steve@ZooKoo.com)</p>
 
 <p><em>Steve Tickle</em></p>
+
+<p><a href="https://www.linkedin.com/in/stevetickle1974/">LinkedIn</a></p>
 </div>
 
         
