--- a/BlockWorks/public/about/index.html
+++ b/BlockWorks/public/about/index.html
@@ -22,7 +22,7 @@
 <meta name="og:url" content="http://BlockWorks.co/">
 <meta name="og:image" itemprop="image primaryImageOfPage" content="http://BlockWorks.co/tn.png">
 
-<link rel="shortcut icon" href="http://BlockWorks.co/sam.ico" id="favicon">
+<link rel="shortcut icon" href="http://BlockWorks.co/favicon.ico" id="favicon">
 <link rel="stylesheet" href="http://BlockWorks.co/css/style.css">
 
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Didact+Gothic">
@@ -58,7 +58,7 @@ No embedded-device lives on its own, they tend to naturally be one small part of
 I consider myself a systems-focussed engineer and architect, spreading my time across most disciplines
 and the communication between them.
 My technical knowledge is both broad and deep, allowing me to match up high-level abstractions with
-low-level implemetation details to produce a more optimal system.</p>
+low-level implementation details to produce a more optimal system.</p>
 
 <p>As any complex system develops, the need for testing becomes paramount, especially as the scale of the
 deployment rises. To that end, designing-for-test is an important aspect of my methodologies.</p>
@@ -101,7 +101,7 @@ deployment rises. To that end, designing-for-test is an important aspect of my m
 </p></div>
         
 
-        <div class="section footer"></div>
+        <div class="section footer"><a href="http://BlockWorks.co">BlockWorks.co</a>, an embedded software consultancy</div>
     </div>
 </body>
 
