--- a/BlockWorks/public/about/index.html
+++ b/BlockWorks/public/about/index.html
@@ -44,29 +44,23 @@
     <div class="wrap">
         <div class="section" id="title">BlockWorks Co</div>
 
-        <div class="section" id="content"><p>I&rsquo;m an experienced software engineer and architect with many years working with embedded, real-time and
+        <div class="section" id="content"><p>I'm an experienced software engineer and architect with many years working with embedded, real-time and
 resource-constrained systems.
-Domains I&rsquo;ve worked in cover many industries from defense, smart-metering, IoT, GPS, signal processing
+Domains I've worked in cover many industries from defense, smart-metering, IoT, GPS, signal processing
 and mobile applications.</p>
-
-<p>The intention here is to share some wisdom and best-practices that I&rsquo;ve picked up over my years consulting
-for the many clients I&rsquo;ve worked for.</p>
-
-<p>Though focussed on embedded/real-time work, I&rsquo;ve also served my time on the server and desktop side(s)
+<p>The intention here is to share some wisdom and best-practices that I've picked up over my years consulting
+for the many clients I've worked for.</p>
+<p>Though focussed on embedded/real-time work, I've also served my time on the server and desktop side(s)
 to accompany the embedded devices.
 No embedded-device lives on its own, they tend to naturally be one small part of larger systems and
 I consider myself a systems-focussed engineer and architect, spreading my time across most disciplines
 and the communication between them.
 My technical knowledge is both broad and deep, allowing me to match up high-level abstractions with
 low-level implementation details to produce a more optimal system.</p>
-
 <p>As any complex system develops, the need for testing becomes paramount, especially as the scale of the
 deployment rises. To that end, designing-for-test is an important aspect of my methodologies.</p>
-
-<p>If you wish to contact me for any matter, professionally or otherwise, feel free to email me (Steve@ZooKoo.com)</p>
-
+<p>If you wish to contact me for any matter, professionally or otherwise, feel free to email me (<a href="mailto:Steve@ZooKoo.com">Steve@ZooKoo.com</a>)</p>
 <p><em>Steve Tickle</em></p>
-
 <p><a href="https://www.linkedin.com/in/stevetickle1974/">LinkedIn</a></p>
 </div>
 
